welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: value unary_! is not a member of Unit
  while (!estPosFinale()) {
         ^ColumnByColumn:13: error: not found: value getMondelargeur
  return (getX() == getMondelargeur-1 && getY() == getMondeLargeur()-1)
                    ^ColumnByColumn:13: warning: enclosing method estPosFinale has result type Unit: return value discarded
  return (getX() == getMondelargeur-1 && getY() == getMondeLargeur()-1)
  ^